# shfmt-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  renovate.json  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  python-publish.yml  sync_readme_to_release.yml  update_readme.py  update_shfmt_checksums.py  update_shfmt_checksums.yml
tests/: test_fallback.py
