[metadata]
name = shfmt_py
description = Python wrapper around invoking shfmt (https://github.com/mvdan/sh)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxwinterstein/shfmt-py
author = Max Winterstein
author_email = github@winterstein.io
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.9

[flake8]
max-line-length = 120